--- a/DownloadPage/index.html
+++ b/DownloadPage/index.html
@@ -170,7 +170,7 @@
                 <div class="col-lg-6">
                     <h2>Connect to Q-Cloud</h2>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <ul class="list-inline banner-social-buttons">
                         <li>
                             <a href="https://twitter.com/daskeyboard" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
@@ -182,7 +182,7 @@
                             <a href="https://www.linkedin.com/company/1505847" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/Daskeyboard-1876826779206340" class="btn btn-default btn-lg"><i class="fa fa-facebook-official fa-fw"></i> <span class="network-name">Facebook</span></a>
+                            <a href="https://www.facebook.com/Daskeyboard-1876826779206340" class="btn btn-default btn-lg"><i class="fa fa-facebook-official"></i> <span class="network-name">Facebook</span></a>
                         </li>
                     </ul>
                 </div>
