--- a/DownloadPage/index.html
+++ b/DownloadPage/index.html
@@ -167,7 +167,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <h2>Connect to Q-Cloud</h2>
                 </div>
                 <div class="col-lg-8">
@@ -182,7 +182,7 @@
                             <a href="https://www.linkedin.com/company/1505847" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/Daskeyboard-1876826779206340" class="btn btn-default btn-lg"><i class="fa fa-facebook-official"></i> <span class="network-name">Facebook</span></a>
+                            <a href="https://www.facebook.com/Daskeyboard-1876826779206340" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
                     </ul>
                 </div>
