--- a/DownloadPage/index.html
+++ b/DownloadPage/index.html
@@ -168,7 +168,7 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    <h2>Connect to Q-Cloud</h2>
+                    <h2>Social</h2>
                 </div>
                 <div class="col-lg-8">
                     <ul class="list-inline banner-social-buttons">
