--- a/DownloadPage/index.html
+++ b/DownloadPage/index.html
@@ -77,7 +77,7 @@
                                 <a href="https://immense-caverns-93289.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa fa-desktop fa-fw"></i> <span class="network-name">Q Desktop</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-android fa-fw"></i> <span class="network-name">Q Android</span></a>
+                                <a href="https://play.google.com/store/apps/details?id=com.metadot.qbaby_android" class="btn btn-default btn-lg"><i class="fa fa-android fa-fw"></i> <span class="network-name">Q Android</span></a>
                             </li>
                             <!-- <li>
                                 <a href="#" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Q iOS</span></a>
