--- a/DownloadPage/index.html
+++ b/DownloadPage/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Das Keyboard Q Downloads">
     <meta name="author" content="">
 
-    <title>Q - Download</title>
+    <title>Das Keyboard Q - Downloads</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Download Page</h1>
+                        <h1>Download xPage</h1>
                         <h3>Find the application that fits your needs</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
