--- a/downloads/index.html
+++ b/downloads/index.html
@@ -32,35 +32,6 @@
 
 <body>
 
-    <!-- Navigation -->
-    <!-- <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#">Start Bootstrap</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav> -->
-
-
     <!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
@@ -69,8 +40,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Download xPage</h1>
-                        <h3>Find the application that fits your needs</h3>
+                        <h1>Das Keyboard Q Downloads</h1>
+                        <h3>Suggestion: if you have an Android phone, try both apps.</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -83,10 +54,12 @@
                                 <a href="#" class="btn btn-default btn-lg"><i class="fa fa-apple fa-fw"></i> <span class="network-name">Q iOS</span></a>
                             </li> -->
                         </ul>
+                        <br/>
+                        <p><a href="https://github.com/DasKeyboard/q">Getting started with Das Keyboard 5Q software</a></p>
+
                     </div>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
 
@@ -95,7 +68,7 @@
 
     <!-- Page Content -->
 
-	<a  name="services"></a>
+    <a name="services"></a>
     <div class="content-section-a">
 
         <div class="container">
@@ -103,8 +76,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Q: SUPER MARKETING PUNCHLINE</h2>
-                    <p class="lead">Here is a stupid but beatiful text.</p>
+                    <h2 class="section-heading">Q Mobile. </h2>
+                    <p class="lead">Have gotten a real Das Keyboard on your desk yet? Use the Android app to display what's' your (virtual keyboard) on the go.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -125,8 +98,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Q Desktop<br>for Linux & Windows (macOs soon)</h2>
+                    <p class="lead">Configure your Das Keyboard 5Q, share RGB profiles and stream real time info to your 5Q keyboard </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
@@ -139,36 +112,15 @@
     </div>
     <!-- /.content-section-b -->
 
-    <div class="content-section-a">
 
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-	<a  name="contact"></a>
+    <a name="contact"></a>
     <div class="banner">
 
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-4">
-                    <h2>Social</h2>
+                    <h2>Stay Connected</h2>
                 </div>
                 <div class="col-lg-8">
                     <ul class="list-inline banner-social-buttons">
@@ -182,7 +134,7 @@
                             <a href="https://www.linkedin.com/company/1505847" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/Daskeyboard-1876826779206340" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
+                            <a href="https://www.facebook.com/daskeyboard" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
                         </li>
                     </ul>
                 </div>
@@ -201,22 +153,19 @@
                 <div class="col-lg-12">
                     <ul class="list-inline">
                         <li>
-                            <a href="#">Home</a>
+                            <a href="http://q.daskeyboard.com/">q.daskeyboard.com</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#about">About</a>
+                            <a href="https://github.com/DasKeyboard/q">Getting started with Das Keyboard 5Q software</a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
+
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; metadot.com 2016. All Rights Reserved</p>
+
+                    <p class="copyright text-muted small">Copyright &copy;
+                        <script>
+                            document.write(new Date().getFullYear())
+                        </script> Metadot / Das Keyboard, Corp. All Rights Reserved</p>
                 </div>
             </div>
         </div>
