--- a/downloads/index.html
+++ b/downloads/index.html
@@ -76,8 +76,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Q Mobile. </h2>
-                    <p class="lead">Have gotten a real Das Keyboard on your desk yet? Use the Android app to display what's' your (virtual keyboard) on the go.</p>
+                    <h2 class="section-heading">Q Mobile</h2>
+                    <p class="lead">Haven't got a real Das Keyboard on your desk yet? Use the Android app to display what's' your (virtual keyboard) on the go.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
