--- a/downloads/index.html
+++ b/downloads/index.html
@@ -97,12 +97,15 @@
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
+
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Q Desktop<br>for Linux & Windows (macOs soon)</h2>
-                    <p class="lead">Configure your Das Keyboard 5Q, share RGB profiles and stream real time info to your 5Q keyboard </p>
+                    <p class="lead">Configure your Das Keyboard 5Q, share RGB profiles and stream real time info to your 5Q keyboard (watch video at 1'24") </p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="854" height="480" src="https://www.youtube.com/embed/CXwzxIQ5ocA" frameborder="0 " allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
 
@@ -113,28 +116,28 @@
     <!-- /.content-section-b -->
 
 
-    <a name="contact"></a>
-    <div class="banner">
+    <a name="contact "></a>
+    <div class="banner ">
 
-        <div class="container">
+        <div class="container ">
 
-            <div class="row">
-                <div class="col-lg-4">
+            <div class="row ">
+                <div class="col-lg-4 ">
                     <h2>Stay Connected</h2>
                 </div>
-                <div class="col-lg-8">
-                    <ul class="list-inline banner-social-buttons">
+                <div class="col-lg-8 ">
+                    <ul class="list-inline banner-social-buttons ">
                         <li>
-                            <a href="https://twitter.com/daskeyboard" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="https://twitter.com/daskeyboard " class="btn btn-default btn-lg "><i class="fa fa-twitter fa-fw "></i> <span class="network-name ">Twitter</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/DasKeyboard" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/DasKeyboard " class="btn btn-default btn-lg "><i class="fa fa-github fa-fw "></i> <span class="network-name ">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/company/1505847" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="https://www.linkedin.com/company/1505847 " class="btn btn-default btn-lg "><i class="fa fa-linkedin fa-fw "></i> <span class="network-name ">Linkedin</span></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/daskeyboard" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
+                            <a href="https://www.facebook.com/daskeyboard " class="btn btn-default btn-lg "><i class="fa fa-facebook-square fa-fw "></i> <span class="network-name ">Facebook</span></a>
                         </li>
                     </ul>
                 </div>
@@ -148,21 +151,21 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-lg-12 ">
+                    <ul class="list-inline ">
                         <li>
-                            <a href="http://q.daskeyboard.com/">q.daskeyboard.com</a>
+                            <a href="http://q.daskeyboard.com/ ">q.daskeyboard.com</a>
                         </li>
-                        <li class="footer-menu-divider">&sdot;</li>
+                        <li class="footer-menu-divider ">&sdot;</li>
                         <li>
-                            <a href="https://github.com/DasKeyboard/q">Getting started with Das Keyboard 5Q software</a>
+                            <a href="https://github.com/DasKeyboard/q ">Getting started with Das Keyboard 5Q software</a>
                         </li>
 
                     </ul>
 
-                    <p class="copyright text-muted small">Copyright &copy;
+                    <p class="copyright text-muted small ">Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear())
                         </script> Metadot / Das Keyboard, Corp. All Rights Reserved</p>
@@ -172,10 +175,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery.js "></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js "></script>
 
 </body>
 
