--- a/downloads/index.html
+++ b/downloads/index.html
@@ -80,7 +80,7 @@
                     <p class="lead">Haven't got a real Das Keyboard on your desk yet? Use the Android app to display what's' your (virtual keyboard) on the go.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/android-q.png" alt="">
                 </div>
             </div>
 
