--- a/downloads/index.html
+++ b/downloads/index.html
@@ -99,7 +99,7 @@
                     <hr class="section-heading-spacer">
 
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Q Desktop<br>for Linux & Windows (macOs soon)</h2>
+                    <h2 class="section-heading">Q Desktop<br>for Linux, macOs & Windows</h2>
                     <p class="lead">Configure your Das Keyboard 5Q, share RGB profiles and stream real time info to your 5Q keyboard (watch video at 1'24") </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6 col-sm-6">
