Update test Travis

--- a/staging/script-examples/colorize-keyboard/index.html
+++ b/staging/script-examples/colorize-keyboard/index.html
@@ -282,10 +282,10 @@
           <img src="/q-website/images/icon.png" alt="Das Keyboard Logo" width="75" height="100">
         </div>
           <p class="site-footer__link-list">
-            <a href="https://www.daskeyboard.com">back to Das Keybord</a> &bull;
-            <a href="https://twitter.com/daskeyboard">twitter</a> &bull;
-            <a href="https://github.com/DasKeyboard">github</a> &bull;
-            <a href="https://qforum.daskeyboard.com/">forum</a>
+            <a href="https://www.daskeyboard.com">Back to Das Keybord</a> &bull;
+            <a href="https://twitter.com/daskeyboard">Twitter</a> &bull;
+            <a href="https://github.com/DasKeyboard">Github</a> &bull;
+            <a href="https://qforum.daskeyboard.com/">Forum</a>
           </p>
 
           <p class="licenses">
