--- a/staging/index.html
+++ b/staging/index.html
@@ -133,7 +133,7 @@
 
   <div class="homepage__illustration">
     <h1 class="homepage__illustration--text">
-        <span>Das Keyboard is now in Beta!</span>
+        <span>Das Keyboard is now in Beta!!</span>
         &nbsp;
     </h1>
     <div class="hot-reload-gif-container">
