--- a/welcome-video.html
+++ b/welcome-video.html
@@ -1,1 +1,15 @@
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+<div class="embed-container" id="app">
+<div v-if="info == '200'">
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/xUenSxpZp2s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+<div v-else>
+<img src="/images/q-applet.gif"
+alt="Welcome gif"
+width="100%" height="100%">
+</div>
+</div>
+
+<script src="/js/vue-variables.js"></script>
