--- a/welcome-video.html
+++ b/welcome-video.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="/js/vue.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 <div class="embed-container" id="app">
@@ -12,4 +12,4 @@ width="100%" height="100%">
 </div>
 </div>
 
-<script src="/js/vue-variables.js"></script>
+<script src="/js/vue-variables-html.js"></script>
