--- a/welcome-video.html
+++ b/welcome-video.html
@@ -12,4 +12,4 @@ width="100%" height="100%">
 </div>
 </div>
 
-<script src="/js/vue-variables-html.js"></script>
+<script src="/js/vue-variables.js"></script>
