--- a/welcome-video.html
+++ b/welcome-video.html
@@ -1,17 +1,18 @@
 <html>
 <head>
+    <!-- Using vue.js in order to display the youtube video or the gif for china -->
     <script src="/js/vue.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
 
-    <div class="embed-container" id="app">
-    <div v-if="info == '200'">
+    <div class="embed-container" id="videoOrGif">
+    <div v-if="status == '200'">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/xUenSxpZp2s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div v-else>
     <img src="/images/q-applet.gif"
-    alt="Welcome gif"
+    alt="Easy applets configuration with Das Keyboard Q"
     width="100%" height="100%">
     </div>
     </div>
