Changed status variable to test. Waiting for China access.

--- a/welcome-video.html
+++ b/welcome-video.html
@@ -7,7 +7,7 @@
 <body>
 
     <div class="embed-container" id="videoOrGif">
-    <div v-if="status == '200'">
+    <div v-if="test == '404'">
     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/xUenSxpZp2s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div v-else>
@@ -21,4 +21,3 @@
 
 </body>
 </html>
-
